--- a/style.css
+++ b/style.css
@@ -34,12 +34,40 @@ body {
     right: 10px;
 }
 
+.form-wrapper {
+	margin: 0 0 15px;
+}
+
+.form-wrapper input {
+	display: block;
+	margin: 0 auto;
+	padding: 10px 15px;
+}
+
+.form-wrapper button {
+	border: 0;
+	color: #ffffff;
+	background: #da1e26;
+	font-weight: bold;
+	padding: 15px 20px;
+	font-size: 16px;
+	border-radius: 4px;
+	margin-top: 20px;
+	cursor: pointer;
+	transition: 0.3s;
+}
+
+.form-wrapper button:hover {
+	opacity: 0.8;
+}
+
 body > img {
     margin: 0 10px;
 }
 
 img {
     max-height: 250px;
+    padding: 15px;
 }
 
 footer {
@@ -48,18 +76,4 @@ footer {
     text-align: center;
     line-height: 10vh;
     font-size: 12px;
-}
-
-strong {
-    color: white;
-}
-
-h3 {
-    color: white;
-}
-
-p {
-    text-align: center;
-    font-size: larger;
-    color: white;
 }
